--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -13,7 +13,7 @@ num_enum = "0.5.1"
 rustyline = "7.1.0"
 serde = { version = "1.0.118", features = ["derive"] }
 sha-1 = "0.9.2"
-srp = "0.5.0"
+srp = { version = "0.5", path = "../../../PAKEs/srp" }
 static_assertions = "1.1.0"
 structopt = "0.3.21"
 thiserror = "1.0.22"
@@ -36,3 +36,4 @@ sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql"] }
 game = { path = "../../crates/game" }
 mysql = { path = "../../crates/mysql" }
 num-bigint = "0.2"
+derivative = "2.1.1"
