--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -7,33 +7,42 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bincode = "1.3.1"
+async-std = { version = "1.8.0", features = ["unstable", "async-channel"] }
+async-trait = "0.1.42"
+sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql"], path = "../../../sqlx" }
+
+bincode = { version = "1.3.1", path = "../../../bincode" }
+serde = { version = "1.0.118", features = ["derive"] }
+serde_yaml = "0.8.14"
+
 derive_more = "0.99.11"
+derivative = "2.1.1"
+
+anyhow = "1.0.36"
+thiserror = "1.0.22"
+human-panic = "1.0.3"
+
 num_enum = "0.5.1"
 rustyline = "7.1.0"
-serde = { version = "1.0.118", features = ["derive"] }
-sha-1 = "0.9.2"
-srp = { version = "0.5", path = "../../../PAKEs/srp" }
 static_assertions = "1.1.0"
-structopt = "0.3.21"
-thiserror = "1.0.22"
 assert-size-attribute = { path = "../../crates/assert-size-attribute" }
-tracing = "0.1.22"
-async-std = { version = "1.8.0", features = ["unstable", "async-channel"] }
-anyhow = "1.0.36"
-serde_yaml = "0.8.14"
-colored = "2.0.0"
-tui = "0.13.0"
-async-trait = "0.1.42"
-termion = "1.5.5"
-tui-logger = { version = "0.4.8", path = "../../../tui-logger" }
-tracing-subscriber = { version = "0.2.15", features = ["tracing-log"] }
-human-panic = "1.0.3"
-tracing-futures = "0.2.4"
+structopt = "0.3.21"
 rand = "0.8.0"
 lazy_static = "1.4.0"
-sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql"] }
+num-bigint = "0.2"
+
+tracing = "0.1.22"
+tracing-subscriber = { version = "0.2.15", features = ["tracing-log"] }
+tracing-futures = "0.2.4"
+
+colored = "2.0.0"
+termion = "1.5.5"
+tui = "0.13.0"
+tui-logger = { version = "0.4.8", path = "../../../tui-logger" }
+
+wow-srp = { path = "../../crates/wow-srp" }
 game = { path = "../../crates/game" }
 mysql = { path = "../../crates/mysql" }
-num-bigint = "0.2"
-derivative = "2.1.1"
+
+[dev-dependencies]
+test-case = "1.0.0"
