--- a/crates/mysql/Cargo.toml
+++ b/crates/mysql/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1.42"
+wow-srp = { path = "../wow-srp" }
 game = { path = "../game" }
 lazy_static = "1.4.0"
 rand = "0.8.0"
-sha-1 = "0.9.2"
-sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql"] }
-srp = "0.5.0"
+sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql"], path = "../../../sqlx" }
+tracing = "0.1.22"
+tracing-futures = "0.2.4"
