--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = { version = "1.8.0", features = ["unstable", "async-channel"] }
+async-std = { version = "1.8.0", features = ["unstable", "async-channel", "attributes"] }
 async-trait = "0.1.42"
 sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql"], path = "../../../sqlx" }
 
