refactor(auth): move code out of authserver

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -25,3 +25,6 @@ rustflags = ["-Zshare-generics=y"]
 # In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
 #[profile.dev]
 #debug = 1
+
+[profile.release]
+lto = true
