--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -4,12 +4,10 @@ version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 async-std = { version = "1.8.0", features = ["unstable", "async-channel", "attributes"] }
 async-trait = "0.1.42"
-sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql"], path = "../../../sqlx" }
+sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql", "offline"], path = "../../../sqlx" }
 
 bincode = { version = "1.3.1", path = "../../../bincode" }
 serde = { version = "1.0.118", features = ["derive"] }
