--- a/crates/game/Cargo.toml
+++ b/crates/game/Cargo.toml
@@ -11,5 +11,7 @@ derive_more = "0.99.11"
 enumflags2 = "0.7.0-preview1"
 num_enum = "0.5.1"
 sqlx = { version = "0.4.2", features = ["macros", "mysql"], path = "../../../sqlx" }
+strum = "0.20.0"
+strum_macros = "0.20.1"
 thiserror = "1.0.22"
 wow-srp = { path = "../wow-srp" }
