--- a/crates/game/Cargo.toml
+++ b/crates/game/Cargo.toml
@@ -10,7 +10,7 @@ async-trait = "0.1.42"
 derive_more = "0.99.11"
 enumflags2 = "0.7.0-preview1"
 num_enum = "0.5.1"
-sqlx = { version = "0.4.2", features = ["macros", "mysql"], path = "../../../sqlx" }
+sqlx = { version = "0.4.2", features = ["macros", "mysql"], git = "https://github.com/arlyon/sqlx.git" }
 strum = "0.20.0"
 strum_macros = "0.20.1"
 thiserror = "1.0.22"
