--- a/crates/wow-srp/Cargo.toml
+++ b/crates/wow-srp/Cargo.toml
@@ -11,5 +11,5 @@ rand = "0.8.0"
 rand_derive = "0.5.0"
 serde = { version = "1.0.118", features = ["derive"] }
 sha-1 = "0.9.2"
-sqlx = { version = "0.4.2", path = "../../../sqlx" }
+sqlx = { version = "0.4.2", git = "https://github.com/arlyon/sqlx.git" }
 tracing = "0.1.22"
