chore: clean up dependencies and assign licenses

--- a/crates/assert-size-attribute/Cargo.toml
+++ b/crates/assert-size-attribute/Cargo.toml
@@ -3,6 +3,7 @@ name = "assert-size-attribute"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2018"
+license = "MIT"
 
 [lib]
 proc-macro = true
