--- a/crates/game/Cargo.toml
+++ b/crates/game/Cargo.toml
@@ -3,6 +3,7 @@ name = "game"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2018"
+license = "MIT"
 
 [dependencies]
 arrayvec = "0.5.2"
