--- a/services/world/Cargo.toml
+++ b/services/world/Cargo.toml
@@ -3,7 +3,6 @@ name = "world"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
 
 [dependencies]
