chore: update dependencies and fix code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,6 @@
 [workspace]
 members = ["crates/*", "services/*"]
+
+[patch.crates-io]
+sqlx = {git = "https://github.com/arlyon/sqlx.git"}
+bincode = {git = "https://github.com/arlyon/bincode.git", branch = "arlyon/null-str-encoding"}
