--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -3,14 +3,13 @@ name = "auth"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2018"
-license = "MIT"
 
 [dependencies]
 async-std = { version = "1.8.0", features = ["unstable", "async-channel", "attributes"] }
 async-trait = "0.1.42"
-sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql", "offline"], git = "https://github.com/arlyon/sqlx.git" }
+sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "mysql", "offline"] }
 
-bincode = { version = "1.3.1", git = "https://github.com/arlyon/bincode.git", branch = "arlyon/null-str-encoding" }
+bincode = "2.0.0-dev"
 serde = { version = "1.0.118", features = ["derive"] }
 serde_yaml = "0.8.14"
 
@@ -28,7 +27,7 @@ assert-size-attribute = { path = "../../crates/assert-size-attribute" }
 structopt = "0.3.21"
 rand = "0.8.0"
 lazy_static = "1.4.0"
-num-bigint = "0.3.1"
+num-bigint = "0.2"
 
 tracing = "0.1.22"
 tracing-subscriber = { version = "0.2.15", features = ["tracing-log"] }
@@ -37,6 +36,7 @@ tracing-futures = "0.2.4"
 colored = "2.0.0"
 termion = "1.5.5"
 tui = "0.13.0"
+tui-logger = { version = "0.4.8" }
 
 wow-srp = { path = "../../crates/wow-srp" }
 game = { path = "../../crates/game" }
