--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,15 +7,17 @@ services:
     depends_on: [database]
     environment:
       AZERUST_LOGIN_DATABASE: mysql://root:azerust@database/auth
-      RUST_LOG: mysql=DEBUG,auth=DEBUG
-    volumes: []
+      RUST_LOG: mysql=DEBUG,auth=DEBUG,game=DEBUG
+    volumes:
+      - ./config-compose.yaml:/config.yaml:Z
     ports:
       - "3724:3724"
   database:
-    image: "mysql:8"
+    image: "mysql:5.7"
     environment:
       MYSQL_ROOT_PASSWORD: azerust
     ports:
       - "3306:3306"
     volumes:
       - ./scripts/db:/docker-entrypoint-initdb.d:Z
+      - ./data:/var/lib/mysql:Z
