--- a/crates/game/Cargo.toml
+++ b/crates/game/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 arrayvec = "0.7"
 async-trait = "0.1"
+chrono = "0.4.19"
 derive_more = "0.99"
 enumflags2 = "0.7.0-preview1"
 num_enum = "0.5"
