--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -40,7 +40,9 @@ tui = "0.16"
 wow-srp = { path = "../../crates/wow-srp" }
 game = { path = "../../crates/game" }
 mysql = { path = "../../crates/mysql" }
+tide = { path = "../../crates/tide" }
 enumflags2 = "0.7.0-preview1"
+chrono = "0.4.19"
 
 [dev-dependencies]
 test-case = "1"
