--- a/crates/graphql/Cargo.toml
+++ b/crates/graphql/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "graphql"
 version = "0.1.0"
-edition = "2021"
+authors = ["Alexander Lyon <arlyon@me.com>"]
+edition = "2018"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 async-graphql = {version = "2.9", features = ["chrono"] }
 sqlx = {version = "0.5", features = ["macros", "chrono"] }
-tide = "0.16"
 chrono = "0.4"
 
 game = {path = "../game"}
