--- a/crates/tide/Cargo.toml
+++ b/crates/tide/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "tide"
 version = "0.1.0"
-edition = "2021"
+authors = ["Alexander Lyon <arlyon@me.com>"]
+edition = "2018"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
