--- a/crates/wow-srp/Cargo.toml
+++ b/crates/wow-srp/Cargo.toml
@@ -3,6 +3,7 @@ name = "wow-srp"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 lazy_static = "1.4"
