--- a/crates/tide/Cargo.toml
+++ b/crates/tide/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tide"
+name = "azerust-tide"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2018"
@@ -10,7 +10,8 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 async-graphql-tide = "2.9.15"
 tide = "0.16.0"
-graphql = {path = "../graphql"}
 sqlx = "0.5.7"
 async-graphql = "2.9.15"
-game = {path = "../game"}
+
+azerust-graphql = {path = "../graphql"}
+azerust-game = {path = "../game"}
