--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "auth"
+name = "azerust-auth"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2018"
@@ -33,9 +33,9 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
 
 wow-srp = { path = "../../crates/wow-srp" }
-game = { path = "../../crates/game" }
-mysql = { path = "../../crates/mysql" }
-tide = { path = "../../crates/tide" }
+azerust-game = { path = "../../crates/game" }
+azerust-mysql = { path = "../../crates/mysql" }
+azerust-tide = { path = "../../crates/tide" }
 enumflags2 = "0.7.0-preview1"
 chrono = "0.4.19"
 
