feat: add world server authentication and encryption

--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "azerust-tide"
+name = "azerust-protocol"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2018"
@@ -7,11 +7,12 @@ license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-async-graphql-tide = "2.9.15"
-tide = "0.16.0"
-sqlx = "0.5.7"
-async-graphql = "2.9.15"
+[features]
+world = []
+auth = []
 
-azerust-graphql = { path = "../graphql" }
-azerust-game = { path = "../game" }
+[dependencies]
+azerust-game = { path = "../../crates/game" }
+derive_more = "0.99.16"
+num_enum = "0.5.4"
+serde = { version = "1.0.130", features = ["derive"] }
