--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -36,6 +36,7 @@ wow-srp = { path = "../../crates/wow-srp" }
 azerust-game = { path = "../../crates/game" }
 azerust-mysql = { path = "../../crates/mysql" }
 azerust-tide = { path = "../../crates/tide" }
+azerust-protocol = { path = "../../crates/protocol", features = ["auth"] }
 enumflags2 = "0.7.0-preview1"
 chrono = "0.4.19"
 
