--- a/services/world/Cargo.toml
+++ b/services/world/Cargo.toml
@@ -9,15 +9,25 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 anyhow = "1"
-async-std = { version = "1", features = ["unstable", "async-channel", "attributes"] }
+async-std = { version = "1", features = [
+    "unstable",
+    "async-channel",
+    "attributes",
+] }
 human-panic = "1"
 structopt = "0.3"
 tracing = "0.1"
 azerust-game = { path = "../../crates/game" }
 azerust-mysql = { path = "../../crates/mysql" }
+azerust-protocol = { path = "../../crates/protocol", features = ["world"] }
 serde = "1"
 serde_yaml = "0.8"
-sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "chrono"] }
+sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "chrono", "offline"] }
 tracing-subscriber = "0.2"
 bincode = "2.0.0-dev"
 num_enum = "0.5.4"
+rand = "0.8.4"
+derive_more = "0.99.16"
+sha-1 = "0.9"
+flate2 = "1.0.22"
+rust-crypto = "0.2"
