--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -34,7 +34,7 @@ tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
 
 wow-srp = { path = "../../crates/wow-srp" }
 azerust-game = { path = "../../crates/game" }
-azerust-mysql = { path = "../../crates/mysql" }
+azerust-mysql-auth = { path = "../../crates/mysql-auth" }
 azerust-tide = { path = "../../crates/tide" }
 azerust-protocol = { path = "../../crates/protocol", features = ["auth"] }
 enumflags2 = "0.7.0-preview1"
