--- a/services/world/Cargo.toml
+++ b/services/world/Cargo.toml
@@ -31,3 +31,5 @@ derive_more = "0.99.16"
 sha-1 = "0.9"
 flate2 = "1.0.22"
 rust-crypto = "0.2"
+azerust-mysql-characters = { path = "../../crates/mysql-characters" }
+futures = "0.3.17"
