--- a/crates/game/Cargo.toml
+++ b/crates/game/Cargo.toml
@@ -2,7 +2,7 @@
 name = "azerust-game"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
-edition = "2018"
+edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
@@ -12,6 +12,7 @@ derive_more = "0.99"
 enumflags2 = "0.7.0-preview1"
 num_enum = "0.5"
 rand = "0.8"
+serde = { version = "1.0.130", features = ["derive"] }
 sha-1 = "0.9"
 sqlx = { version = "0.5", features = ["macros", "mysql"] }
 strum = "0.21"
