--- a/crates/axum/Cargo.toml
+++ b/crates/axum/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "azerust-tide"
+name = "azerust-axum"
 version = "0.1.0"
 authors = ["Alexander Lyon <arlyon@me.com>"]
 edition = "2021"
@@ -8,10 +8,10 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-graphql-tide = "2.9.15"
-tide = "0.16.0"
+async-graphql-axum = "3.0.28"
+axum = "0.4.5"
 sqlx = "0.5.7"
-async-graphql = "2.9.15"
+async-graphql = "3.0.28"
 
 azerust-graphql = { path = "../graphql" }
 azerust-game = { path = "../game" }
