--- a/services/auth/Cargo.toml
+++ b/services/auth/Cargo.toml
@@ -41,6 +41,8 @@ enumflags2 = "0.7.0-preview1"
 chrono = "0.4.19"
 tokio-stream = {version="0.1.8", features=["net", "time"]}
 futures-util = "0.3.19"
+tokio-console = "0.1.1"
+console-subscriber = "0.1.1"
 
 [dev-dependencies]
 test-case = "1"
