--- a/services/world/Cargo.toml
+++ b/services/world/Cargo.toml
@@ -30,3 +30,4 @@ rust-crypto = "0.2"
 azerust-mysql-characters = { path = "../../crates/mysql-characters" }
 futures = "0.3.17"
 tokio-stream = {version="0.1.8", features=["net", "time"]}
+console-subscriber = "0.1.1"
