--- a/services/world/Cargo.toml
+++ b/services/world/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 anyhow = "1"
-tokio = { version = "1", features = ["macros"] }
+tokio = { version = "1", features = ["macros", "tracing"] }
 human-panic = "1"
 structopt = "0.3"
 tracing = "0.1"
