--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,7 +5,11 @@
 
 [target.x86_64-unknown-linux-gnu]
 linker = "/usr/bin/clang"
-rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
+rustflags = [
+  "-Clink-arg=-fuse-ld=lld",
+  "-Zshare-generics=y",
+  "--cfg tokio_unstable", # for tokio-console
+]
 
 # NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
 # `brew install michaeleisel/zld/zld`
@@ -15,11 +19,15 @@ rustflags = [
   "link-arg=-fuse-ld=/usr/local/bin/zld",
   "-Zshare-generics=y",
   "-Zrun-dsymutil=no",
+  "--cfg tokio_unstable", # for tokio-console
 ]
 
 [target.x86_64-pc-windows-msvc]
 linker = "rust-lld.exe"
-rustflags = ["-Zshare-generics=y"]
+rustflags = [
+  "-Zshare-generics=y",
+  "--cfg tokio_unstable", # for tokio-console
+]
 
 # Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
 # In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
